tests/good/nil-op-reccord.tig
let
  type  rectype = {name : string, age : int}
  var rec1 : rectype := rectype {name="Nobody", age=1000}
  var rec2 : rectype := rectype {name="Nobody", age=1000}
in
  nil > rec1
end