tests/bad/record.tig
/* a record type and a record variable */
let
  type  rectype = {name : string, age : int}
  var rec1 := nil
in
  rec1
end
